# Routeline-Logiflow-Backend

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  simulate_move.py
config/: asgi.py  celery_app.py  settings.py  urls.py
logiflow/accounts/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
logiflow/accounts/migrations/: 0001_initial.py  0002_alter_user_role.py
logiflow/analytics/: apps.py  urls.py  views.py
logiflow/deliveries/: apps.py  models.py  serializers.py  urls.py  views.py
logiflow/deliveries/migrations/: 0001_initial.py  0002_delivery_dropoff_label_delivery_pickup_label.py
logiflow/dispatch/: apps.py  services.py
logiflow/drivers/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
logiflow/drivers/migrations/: 0001_initial.py
logiflow/realtime/: consumers.py  emitters.py  routing.py
