[tool.poetry]
package-mode = false
name = "logiflow-backend"
version = "0.1.0"
description = "Smart Logistics & Delivery Dispatch Platform."
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"
djangorestframework = "^3.15"
channels = "^4.0"
daphne = "^4.0"
celery = "^5.3"
redis = "^5.0"
psycopg2-binary = "^2.9"
djangorestframework-simplejwt = "^5.3"
drf-spectacular = "^0.27"
django-cors-headers = "^4.3"
django-environ = "^0.11"
django-model-utils = "^4.3"
channels-redis = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-django = "^4.8"
pytest-cov = "^5.0"
ruff = "^0.3"
mypy = "*"
django-stubs = {extras = ["compatible-mypy"], version = "*"}
djlint = "^1.34"
factory-boy = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = ["tests.py", "test_*.py"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["migrations", "static", "staticfiles"]

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "N", "UP", "YTT", "ASYNC", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10",
    "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF",
    "SLOT", "SIM", "TID", "TCH", "INT", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"
]
ignore = ["S101", "RUF012", "SIM102", "UP038"]

[tool.ruff.lint.isort]
force-single-line = true
